dhall/tests/type-inference/failure/unit/NestedAnnotOuterWrong.txt
Type error: error: annot mismatch: Natural != Bool
 --> <current file>:1:2
  |
1 | (0 : Natural) : Bool
  |  ^^^^^^^^^^^ annot mismatch: Natural != Bool
  |
